<resources>
    <string name="app_name">Ogogwo</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="i_m_not_an_admin">I\'m not an Admin</string>
    <string name="i_m_an_admin">I\'m an Admin</string>
    <string name="buy_items_online_from_ogogwo_we_will_give_you_the_best_service">Buy Items online from Ogogwo, we will give you the best service</string>
    <string name="create_an_account">Create an Account</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="full_name">Full Name....</string>
    <string name="address">Address....</string>
    <string name="change_profile">Change Profile</string>
    <string name="update">Update</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="please_confirm_your_shipment_details">Please confirm your Shipment Details..</string>
    <string name="confirm">Confirm</string>
    <string name="total_price">Total Price =</string>
    <string name="next">Next</string>
    <string name="congratulations_your_final_order_has_been_placed_successfully_soon_it_will_be_verify_by_our_admin">Congratulations, your final order has been placed successfully. soon it will be verify by our Admin</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout_ad">Logout</string>
    <string name="check_new_orders_ad">Check new orders</string>
    <string name="maintain_products_ad">Maintain Products</string>
    <string name="welcome_dear_admin_ad">Welcome Dear Admin</string>
    <string name="add_new_product_sl">Add new product</string>
    <string name="check_and_approve_new_products_ad">Check and Approve New Products</string>
    <string name="new_orders_ne">New Orders</string>
</resources>
