<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminHomeActivity">
    <TextView
        android:id="@+id/welcome_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_dear_admin_ad"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>
    <Button
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:layout_below="@+id/welcome_admin"
    android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/maintain_btn"
    android:layout_marginLeft="80dp"
    android:layout_marginRight="80dp"
    android:background="@color/colorPrimary"
    android:textColor="@color/white"
    android:text="@string/maintain_products_ad"
    android:textSize="18sp"
    android:textAllCaps="false"/>

    <Button
    android:layout_width="match_parent"
    android:layout_height="42dp"
        android:layout_marginBottom="10dp"
    android:layout_below="@+id/maintain_btn"
    android:layout_centerHorizontal="true"
    android:id="@+id/check_order_btn"
    android:layout_marginLeft="80dp"
    android:layout_marginRight="80dp"
    android:background="@color/colorPrimary"
    android:textColor="@color/white"
    android:text="@string/check_new_orders_ad"
    android:textSize="18sp"
    android:textAllCaps="false"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_order_btn"
        android:layout_centerHorizontal="true"
        android:id="@+id/check_approve_product_btn"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/check_and_approve_new_products_ad"
        android:textSize="18sp"
        android:textAllCaps="false"/>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="80dp"
    android:layout_marginRight="80dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="15dp"
    android:id="@+id/admin_logout_btn"
    android:background="@color/colorPrimaryDark"
    android:textColor="@color/white"
    android:text="@string/logout_ad"
    android:textSize="18sp"
    android:textAllCaps="false"/>

</RelativeLayout>