<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"

    tools:context=".Buyer.LoginActivity">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ogwugologo"
        android:id="@+id/login_applogo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_phone_number_input"
        android:layout_below="@+id/login_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:background="@drawable/input_design"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password_input"
        android:layout_below="@+id/login_phone_number_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:layout_marginTop="6dp"
        android:hint="@string/enter_password"
        android:background="@drawable/input_design"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/linear_layout_1"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
     <com.rey.material.widget.CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/remember_me_ckb"
         style="@style/Material.Drawable.CheckBox"
         android:text="@string/remember_me"
         android:textColor="@android:color/holo_red_dark"
         app:cbd_strokeColor="@color/colorPrimary1"
         android:layout_marginLeft="17dp"
         android:textAllCaps="false"
         android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forget_password_link"
            android:textColor="@android:color/holo_red_dark"
            android:text="Forget your Password"
            android:textSize="17sp"
            android:layout_marginLeft="80dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_panel_link"
        android:textColor="@android:color/holo_red_dark"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_btn"
        android:text="@string/i_m_an_admin"
        android:layout_marginEnd="23dp"
        android:textSize="20sp"
        android:layout_marginStart="80dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_not_panel_link"
        android:textColor="@android:color/holo_red_dark"
        android:layout_below="@+id/login_btn"
        android:text="@string/i_m_not_an_admin"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="80dp"
        android:visibility="invisible"/>




</RelativeLayout>
</ScrollView>