<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:background="@color/white"
    tools:context=".Buyer.RegisterActivity">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ogwugologo"
        android:id="@+id/register_applogo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/register_username_input"
        android:layout_below="@+id/register_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"

        android:hint="Username"
        android:background="@drawable/input_design"
        android:inputType="text"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/register_userfirstname_input"
        android:layout_below="@+id/register_username_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        android:hint="@string/firstname"
        android:background="@drawable/input_design"
        android:inputType="text"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/register_userlastname_input"
        android:layout_below="@+id/register_userfirstname_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        android:hint="@string/lastname"
        android:background="@drawable/input_design"
        android:inputType="text"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/register_useremail_input"
        android:layout_below="@+id/register_userlastname_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        android:hint="@string/email"
        android:background="@drawable/input_design"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/register_new_phonenumber"
        android:layout_below="@+id/register_useremail_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:background="@drawable/input_design"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/register_password"
        android:layout_below="@+id/register_new_phonenumber"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/input_design"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"/>
    <Button
        android:id="@+id/create_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/create_an_account"
        android:textColor="@android:color/white"/>

</RelativeLayout>
</ScrollView>