<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyer.SettingsActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:id="@+id/app_bar_settings">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/close_settings_btn"
                    android:text="Close"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/update_account_settings_btn"
                    android:text="@string/update"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:layout_marginRight="19dp"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold"/>
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/profile_image_settings"
        android:src="@drawable/profile"
        android:layout_below="@+id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/profile_image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/change_profile"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_phone_number"
        android:layout_below="@+id/profile_image_change_btn"
        android:hint="Phone Number...."
        android:inputType="phone"
        android:padding="10dp"
        android:layout_margin="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_full_name"
        android:layout_below="@+id/settings_phone_number"
        android:padding="10dp"
        android:hint="@string/full_name"
        android:layout_margin="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_adress"
        android:layout_below="@+id/settings_full_name"
        android:hint="@string/address"
        android:padding="10dp"
        android:layout_margin="15dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/security_questions_btn"
        android:layout_below="@+id/settings_adress"
        android:text="Set Security Questions"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_margin="15dp"/>


</RelativeLayout>
</ScrollView>