<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buyer.CartActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/relative_cart"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_price"
            android:id="@+id/display_cart_total_item_price"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/msg1"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:text="@string/congratulations_your_final_order_has_been_placed_successfully_soon_it_will_be_verify_by_our_admin"
        android:textSize="18sp"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cart_list_recycler"
        android:layout_below="@+id/relative_cart"
        android:layout_above="@+id/next_add_new_item_cart">

    </android.support.v7.widget.RecyclerView>
    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginRight="50dp"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:background="@color/colorPrimary"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_above="@+id/next_add_new_item_cart"-->
        <!--android:id="@+id/total_new_item_cart_layout"-->
        <!--android:text="Next"-->
        <!--android:textSize="16sp"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@color/white"/>-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/next_add_new_item_cart"
        android:text="@string/next"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/next_overall_total_new_item_cart"
        android:text="Total"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/white"/>


</RelativeLayout>